# Campus-Cat-ReID

./: .gitignore  README.md  campus_cat_project_plan.md  pyproject.toml  threshold_strategy.md
ai/: dataset_utils.py  detector.py  faiss_index.py  feature_extractor.py
docs/: cat_photo_requirements.md
scripts/: compute_similarity.py  evaluate_split_baseline.py  test_samples.py
services/: identify_service.py
src/: batch_crop.py  data_loader.py  eval.py  evaluate_split_baseline.py  evaluate_threshold_tuning.py  metric_learning.py  test.py  train.py
tests/: test_recognition.py
